--- a/PhpCode/application/admin/view/user/group/add.html
+++ b/PhpCode/application/admin/view/user/group/add.html
@@ -15,18 +15,7 @@
             <div id="treeview"></div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="c-status" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
 
-            <div class="radio">
-                {foreach name="statusList" item="vo"}
-                <label for="row[status]-{$key}"><input id="row[status]-{$key}" name="row[status]" type="radio" value="{$key}" {in name="key" value="normal"}checked{/in} /> {$vo}</label> 
-                {/foreach}
-            </div>
-
-        </div>
-    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
@@ -36,5 +25,6 @@
     </div>
 </form>
 <script>
+    console.log({:json_encode($nodeList); });
     var nodeData = {:json_encode($nodeList); };
 </script>
