--- a/PhpCode/application/admin/view/news/add.html
+++ b/PhpCode/application/admin/view/news/add.html
@@ -61,6 +61,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">简介:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-name"  class="form-control" name="row[abstract]" type="text" value="">
+        </div>
+    </div>
+    <div class="form-group">
         <label for="c-summary" class="control-label col-xs-12 col-sm-2">内容:</label>
         <div class="col-xs-12 col-sm-8">
             <textarea id="c-summary" data-rule="required" class="form-control editor" rows="5" name="row[body]" cols="50"></textarea>
