--- a/PhpCode/application/admin/view/news/edit.html
+++ b/PhpCode/application/admin/view/news/edit.html
@@ -1,58 +1,51 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
-
-    <div class="form-group">
+    <input type="hidden" name="row[categoryids]" value="{$selectcids}"/>
+    <input type="hidden" name="row[id]" value="{$detail.id}"/>
+    <!--div class="form-group">
         <label for="c-type" class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
         <div class="col-xs-12 col-sm-8">
 
             <select id="c-type" data-rule="required" class="form-control selectpicker" name="row[type]">
-                {foreach name="typeList" item="vo"}
-                <option value="{$key}" {in name="key" value="$row.type"}selected{/in}>{$vo}</option>
-                {/foreach}
+
+                <option value="1" name="key" value="11">2</option>
+
             </select>
 
         </div>
-    </div>
-    <div class="form-group">
-        <label for="c-pid" class="control-label col-xs-12 col-sm-2">{:__('Pid')}:</label>
-        <div class="col-xs-12 col-sm-8">
-
-            <select id="c-pid" data-rule="required" class="form-control selectpicker" name="row[pid]">
-                {foreach name="parentList" item="vo"}
-                <option data-type="{$vo.type}" class="{:$vo.type==$row.type||$vo.type=='all'?'':'hide'}" value="{$key}" {in name="key" value="$row.pid"}selected{/in}>{$vo.name}</option>
-                {/foreach}
-            </select>
-
-        </div>
-    </div>
+    </div-->
     <div class="form-group">
         <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[name]" type="text" value="{$row.name}">
+            <input id="c-name" data-rule="required" class="form-control" name="row[title]" type="text" value="{$detail.title}">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-nickname" class="control-label col-xs-12 col-sm-2">{:__('Nickname')}:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">作者:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-nickname" data-rule="required" class="form-control" name="row[nickname]" type="text" value="{$row.nickname}">
+            <input id="c-name"  class="form-control" name="row[writer]" type="text" value="{$detail.writer}">
         </div>
     </div>
+
     <div class="form-group">
-        <label for="c-flag" class="control-label col-xs-12 col-sm-2">{:__('Flag')}:</label>
+        <label for="nickname" class="control-label col-xs-12 col-sm-2">分类:</label>
         <div class="col-xs-12 col-sm-8">
+            <span class="text-muted"><input type="checkbox" name="" id="checkall" /> <label for="checkall"><small>{:__('Check all')}</small></label></span>
+            <span class="text-muted"><input type="checkbox" name="" id="expandall" /> <label for="expandall"><small>{:__('Expand all')}</small></label></span>
+            <div id="treeview"></div>
+        </div>
+    </div>
 
-            <select  id="c-flag" class="form-control selectpicker" multiple="" name="row[flag][]">
-                {foreach name="flagList" item="vo"}
-                <option value="{$key}" {in name="key" value="$row.flag"}selected{/in}>{$vo}</option>
-                {/foreach}
-            </select>
-
+    <div class="form-group">
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">sn:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-name" data-rule="required" class="form-control" name="row[sn]" type="text" value="{$detail.sn}">
         </div>
     </div>
     <div class="form-group">
         <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('Image')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-image" class="form-control" size="50" name="row[image]" type="text" value="{$row.image}">
+                <input id="c-image" class="form-control" size="50" name="row[cover_img]" type="text" value="{$detail.cover_img}">
                 <div class="input-group-addon no-border no-padding">
                     <span><button type="button" id="plupload-image" class="btn btn-danger plupload" data-input-id="c-image" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="false" data-preview-id="p-image"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
                     <span><button type="button" id="fachoose-image" class="btn btn-primary fachoose" data-input-id="c-image" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
@@ -63,27 +56,21 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-keywords" class="control-label col-xs-12 col-sm-2">{:__('Keywords')}:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">相关链接:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-keywords" class="form-control" name="row[keywords]" type="text" value="{$row.keywords}">
+            <input id="c-name"  class="form-control" name="row[link]" type="text" value="{$detail.link}">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-description" class="control-label col-xs-12 col-sm-2">{:__('Description')}:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">简介:</label>
         <div class="col-xs-12 col-sm-8">
-            <textarea id="c-description" class="form-control" name="row[description]">{$row.description}</textarea>
+            <input id="c-name"  class="form-control" name="row[abstract]" type="text" value="{$detail.abstract}">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-weigh" class="control-label col-xs-12 col-sm-2">{:__('Weigh')}:</label>
+        <label for="c-summary" class="control-label col-xs-12 col-sm-2">内容:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-weigh" class="form-control" name="row[weigh]" type="number" value="{$row.weigh}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')], $row['status'])}
+            <textarea id="c-summary" data-rule="required" class="form-control editor" rows="5" name="row[body]" cols="50">{$detail.body}</textarea>
         </div>
     </div>
     <div class="form-group layer-footer">
@@ -94,3 +81,16 @@
         </div>
     </div>
 </form>
+<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script>
+    var nodeData = {:json_encode($nodeList); };
+    function selected() {
+        var objs = "{$selectcids}";
+        var m = objs.split(",");
+        for (var i = 0; i < m.length; i++) {
+            $id = m[i] + "_anchor";
+            $("#" + m[i]).attr("aria-selected", true);
+            $("#" + $id).addClass("jstree-clicked");
+        }
+    }
+</script>
