前台详情地址简化，前台列表，详情方法初步写好

--- a/PhpCode/application/admin/view/news/add.html
+++ b/PhpCode/application/admin/view/news/add.html
@@ -83,4 +83,7 @@
 <script>
     console.log({:json_encode($nodeList); });
     var nodeData = {:json_encode($nodeList); };
+    function selected(){
+
+    }
 </script>
