--- a/PhpCode/application/admin/view/flash/add.html
+++ b/PhpCode/application/admin/view/flash/add.html
@@ -1,6 +1,5 @@
 <form id="edit-form" class="form-horizontal"enctype="multipart/form-data" role="form" data-toggle="validator" method="POST" action="">
-    <input type="hidden" id="url" name="row[url]" value="{$detail.url}"/>
-    <input type="hidden" id="id" name="row[id]" value="{$detail.id}"/>
+    <input type="hidden" id="url" name="row[url]" />
     <!--div class="form-group">
         <label for="c-type" class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -13,29 +12,34 @@
 
         </div>
     </div-->
-    <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[title]" type="text" value="{$detail.title}">
-        </div>
-    </div>
 
 
 
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">sn:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">site:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[sn]" type="text" value="{$detail.sn}">
+            <select name="row[site]">
+                <option value="1">首页</option>
+            </select>
         </div>
     </div>
-    <div class="form-group nav-box">
-        <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('video')}:</label>
+    <div class="form-group">
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">播放顺序:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select name="row[seq]">
+                <option value="0">0</option>
+                <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('Image')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-image" class="form-control" size="50" name="row[url1]" type="text" value="">
+                <input id="c-image" class="form-control" size="50" name="row[image]" type="text" value="">
                 <div class="input-group-addon no-border no-padding">
-                    <span><input type="file" id="select2"/><i class="fa fa-upload"></i> 选择</button></span>
-
+                    <span><button type="button" id="plupload-image" class="btn btn-danger plupload" data-input-id="c-image" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="false" data-preview-id="p-image"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
+                    <span><button type="button" id="fachoose-image" class="btn btn-primary fachoose" data-input-id="c-image" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
                 </div>
                 <span class="msg-box n-right"></span>
             </div>
@@ -43,21 +47,21 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">预览:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">简介:</label>
         <div class="col-xs-12 col-sm-8">
-            <video id="yulan" src="{$detail.url}"></video>
+            <input id="c-name"  class="form-control" name="row[description]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">简介:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">备注:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-name"  class="form-control" name="row[description]" type="text" value="{$detail.description}">
+            <input id="c-name"  class="form-control" name="row[remark]" type="text" value="">
         </div>
     </div>
     <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('$row[status]', ['1'=>__('Normal'), '0'=>__('Hidden')], $detail['status'])}
+            {:build_radios('row[status]', ['1'=>__('Normal'), '0'=>__('Hidden')], 1)}
         </div>
     </div>
     <div class="form-group layer-footer">
@@ -69,7 +73,8 @@
     </div>
 </form>
 <script>
-
+    console.log({:json_encode($nodeList); });
+    var nodeData = {:json_encode($nodeList); };
 </script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js">
 </script>
@@ -101,34 +106,34 @@
         upload(token, putExtra, config, "pe4grbvsy.bkt.clouddn.com");
     });
     //function upload(token, putExtra, config,domain){
-    $("#select2").unbind("change").bind("change",function(){
-        var file = this.files[0];
-        // eslint-disable-next-line
-        var finishedAttr = [];
-        // eslint-disable-next-line
-        var compareChunks = [];
-        var observable;
-        if (file) {
-            var key = file.name;
-        }
-        observable = qiniu.upload(file, key, token, putExtra, config);
-        var observer = {
-            next(res){
-                // ...
-            },
-            error(err){
-                // ...
-            },
-            complete(res){
-                // ...
-                $("#yulan").attr("src","http://pe4grbvsy.bkt.clouddn.com/"+res.key);
-                $("#url").val("http://pe4grbvsy.bkt.clouddn.com/"+res.key);
+        $("#select2").unbind("change").bind("change",function(){
+            var file = this.files[0];
+            // eslint-disable-next-line
+            var finishedAttr = [];
+            // eslint-disable-next-line
+            var compareChunks = [];
+            var observable;
+            if (file) {
+                var key = file.name;
             }
-        }
-        var subscription = observable.subscribe(observer) // 上传开始
-        console.log(observable);
-    })
-    // }
+            observable = qiniu.upload(file, key, token, putExtra, config);
+            var observer = {
+                next(res){
+                    // ...
+                },
+                error(err){
+                    // ...
+                },
+                complete(res){
+                    // ...
+                    $("#yulan").attr("src","http://pe4grbvsy.bkt.clouddn.com/"+res.key);
+                    $("#url").val("http://pe4grbvsy.bkt.clouddn.com/"+res.key);
+                }
+            }
+            var subscription = observable.subscribe(observer) // 上传开始
+console.log(observable);
+        })
+   // }
     //var observable = qiniu.upload(file, key, token, putExtra, config);
     //var subscription = observable.subscribe(observer) // 上传开始
 </script>
