--- a/PhpCode/application/admin/view/flash/edit.html
+++ b/PhpCode/application/admin/view/flash/edit.html
@@ -1,6 +1,5 @@
 <form id="edit-form" class="form-horizontal"enctype="multipart/form-data" role="form" data-toggle="validator" method="POST" action="">
-    <input type="hidden" id="url" name="row[url]" value="{$detail.url}"/>
-    <input type="hidden" id="id" name="row[id]" value="{$detail.id}"/>
+    <input type="hidden" id="url" name="row[id]" />
     <!--div class="form-group">
         <label for="c-type" class="control-label col-xs-12 col-sm-2">{:__('Type')}:</label>
         <div class="col-xs-12 col-sm-8">
@@ -13,29 +12,37 @@
 
         </div>
     </div-->
-    <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">{:__('Name')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[title]" type="text" value="{$detail.title}">
-        </div>
-    </div>
 
 
 
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">sn:</label>
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">site:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-name" data-rule="required" class="form-control" name="row[sn]" type="text" value="{$detail.sn}">
+            <select name="row[site]">
+                <option value="1">首页</option>
+            </select>
         </div>
     </div>
-    <div class="form-group nav-box">
-        <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('video')}:</label>
+    <div class="form-group">
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">播放顺序:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select name="row[seq]">
+                <option value="0"{if condition="$detail.seq eq 0"}selected{/if}>0</option>
+                <option value="1"{if condition="$detail.seq eq 1"}selected{/if}>1</option>
+                <option value="2"{if condition="$detail.seq eq 2"}selected{/if}>2</option>
+                <option value="3"{if condition="$detail.seq eq 3"}selected{/if}>3</option>
+                <option value="4"{if condition="$detail.seq eq 4"}selected{/if}>4</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-image" class="control-label col-xs-12 col-sm-2">{:__('Image')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
-                <input id="c-image" class="form-control" size="50" name="row[url1]" type="text" value="">
+                <input id="c-image" class="form-control" size="50" name="row[image]" type="text" value="{$detail.image}">
                 <div class="input-group-addon no-border no-padding">
-                    <span><input type="file" id="select2"/><i class="fa fa-upload"></i> 选择</button></span>
-
+                    <span><button type="button" id="plupload-image" class="btn btn-danger plupload" data-input-id="c-image" data-mimetype="image/gif,image/jpeg,image/png,image/jpg,image/bmp" data-multiple="false" data-preview-id="p-image"><i class="fa fa-upload"></i> {:__('Upload')}</button></span>
+                    <span><button type="button" id="fachoose-image" class="btn btn-primary fachoose" data-input-id="c-image" data-mimetype="image/*" data-multiple="false"><i class="fa fa-list"></i> {:__('Choose')}</button></span>
                 </div>
                 <span class="msg-box n-right"></span>
             </div>
@@ -43,15 +50,15 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-name" class="control-label col-xs-12 col-sm-2">预览:</label>
-        <div class="col-xs-12 col-sm-8">
-            <video id="yulan" src="{$detail.url}"></video>
-        </div>
-    </div>
-    <div class="form-group">
         <label for="c-name" class="control-label col-xs-12 col-sm-2">简介:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-name"  class="form-control" name="row[description]" type="text" value="{$detail.description}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-name" class="control-label col-xs-12 col-sm-2">备注:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-name"  class="form-control" name="row[remark]" type="text" value="{$detail.remark}">
         </div>
     </div>
     <div class="form-group">
@@ -68,9 +75,6 @@
         </div>
     </div>
 </form>
-<script>
-
-</script>
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.0.js">
 </script>
 <script type="text/javascript" src='https://unpkg.com/qiniu-js@2.5.1/dist/qiniu.min.js'></script>
