--- a/PhpCode/application/admin/view/news/add.html
+++ b/PhpCode/application/admin/view/news/add.html
@@ -72,6 +72,12 @@
             <textarea id="c-summary" data-rule="required" class="form-control editor" rows="5" name="row[body]" cols="50"></textarea>
         </div>
     </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            {:build_radios('$row[status]', ['1'=>__('Normal'), '0'=>__('Hidden')], 1)}
+        </div>
+    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
