--- a/PhpCode/application/admin/view/video/add.html
+++ b/PhpCode/application/admin/view/video/add.html
@@ -53,7 +53,12 @@
             <input id="c-name"  class="form-control" name="row[description]" type="text" value="">
         </div>
     </div>
-
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            {:build_radios('$row[status]', ['1'=>__('Normal'), '0'=>__('Hidden')], 1)}
+        </div>
+    </div>
     <div class="form-group layer-footer">
         <label class="control-label col-xs-12 col-sm-2"></label>
         <div class="col-xs-12 col-sm-8">
