--- a/PhpCode/public/assets/css/style.css
+++ b/PhpCode/public/assets/css/style.css
@@ -148,5 +148,6 @@ a,.un,.un:link,.un:visited,.un:hover,.un:active{
 .site_map_contact_list li { margin-bottom: 20px; max-width: 419px; }
 .qrcode { position: absolute; left: 1351px; bottom: 50px; width: 120px; height: 120px; background-color: #FFFFFF; }
 
-.foot { display: inline-block; width: 100%; height: 60px; position: absolute; background-color: #232C44; left: 0px; top: 6340px;}
+.foot { display: inline-block; width: 100%; height: 60px; position: absolute; background-color: #232C44; left: 0px;
+    bottom:0;}
 .foot_text { position: absolute; left: 0px; top: 19px; width: 100%; text-align: center; font-size: 16px; color: #FFFFFF; }
